--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "http": "^0.0.1-security",
     "mysql": "^2.18.1",
     "mysql2": "^3.6.2",
+    "nunjucks": "^3.2.4",
     "path": "^0.12.7",
     "session": "^0.1.0",
     "session-file-store": "^1.5.0"
